--- a/html/textTools/index.html
+++ b/html/textTools/index.html
@@ -246,8 +246,8 @@
         </div>
 
         <div id="previewAndCode" class="w-1/2 m-8 relative">
-            <div class="fixed top-18 w-1/2 pr-20 h-screen pb-48">
-                <div class="h-1/2 flex flex-col mb-8">
+            <div class="fixed top-18 w-1/2 pr-20 h-screen pb-48" id="height">
+                <div class="flex flex-col mb-8" id="previewHeight">
                     <h3 class="text-3xl font-mono font-semibold">Preview</h3>
                     <div class="flex-auto my-1 ml-4 border-2 rounded-lg border-slate-300 p-4" id="previewBlock">
                         ここはプレビュー領域</div>
@@ -265,6 +265,7 @@
             </div>
         </div>
     </div>
+    <script src="../../js/preview.js"></script>
     <script src="../../js/copyClipboard.js"></script>
     <script src="../../js/textTools.js"></script>
     <script src="../../js/colorSelector.js"></script>
